move virtual GetPath() implementation out of line to work around an apparent Fedora g++ 4.x bug (see #10791)

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/branches/WX_2_9_0_BRANCH@60643 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775